[tool.poetry]
name = "sonormal"
version = "0.2.1"
description = "Schema.org normalization service"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.1"
Flask = "^1.1.2"
flask_accept = "^0.0.6"
requests = "^2.25.0"
CacheControl = "^0.12.6"
dateparser = "^1.0.0"
pyppeteer = "^0.2.5"
rpyc = "^5.0.1"
pyjnius = "^1.3.0"
"org.webpki.json" = {git = "https://github.com/datadavev/json-canonicalization.git", rev = "develop"}
jupyterlab = "^3.0.9"
pyld = {git = "https://github.com/datadavev/pyld.git", tag = "2.0.4-dev_ddv-0.1"}
uWSGI = "^2.0.19"
#clipboard = "^0.0.4"
click = "^7.1.2"
diskcache = "^5.2.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
rdflib = "^5.0.0"
orjson = "^3.6.0"

[tool.poetry.extras]
docs = [
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jld = "sonormal.__main__:main"
