[tool.poetry]
name = "sonormal"
version = "0.3.3"
description = "Schema.org normalization tool"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
CacheControl = "^0.12.6"
dateparser = "^1.0.0"
pyppeteer = "^0.2.5"
jupyterlab = "^3.0.9"
pyld = {git = "https://github.com/datadavev/pyld.git", tag = "ddv-2.1.0"}
uWSGI = "^2.0.19"
#clipboard = "^0.0.4"
click = "^7.1.2"
diskcache = "^5.2.1"
Flask-Cors = "^3.0.10"
dynaconf = "^3.1.4"
shortuuid = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
rdflib = "^5.0.0"
orjson = "^3.6.0"
jupyter-book = "^0.11.1"
cookiecutter = "^1.7.3"
matplotlib = "^3.4.2"
numpy = "^1.21.0"
ghp-import = "^2.0.1"

[tool.poetry.extras]
docs = [
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
so = "sonormal.__main__:main"
