[tool.poetry]
name = "sonormal"
version = "0.3.5"
description = "Schema.org normalization tool"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
#pyppeteer = "^0.2.5"
requests = "^2.28.1"
dateparser = "^1.1.1"
pyld = {git = "https://github.com/datadavev/pyld.git", tag = "ddv-2.1.0"}
click = "^8.1.3"
diskcache = "^5.4.0"
dynaconf = "^3.1.9"
shortuuid = "^1.0.9"
pyppeteer = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pylint = "^2.6.0"

[tool.poetry.extras]
docs = [
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
so = "sonormal.__main__:main"
